fixed design alignments

--- a/angular/decos/e-ifu/src/app/card-content/card-content.component.scss
+++ b/angular/decos/e-ifu/src/app/card-content/card-content.component.scss
@@ -18,7 +18,8 @@ mat-card-title-group.mat-mdc-card-title-group {
 
 .content-div {
   display: flex;
-  justify-content: flex-start;
+  width: 55%;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
