--- a/angular/decos/e-ifu/src/styles.scss
+++ b/angular/decos/e-ifu/src/styles.scss
@@ -12,16 +12,16 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-color: white !important;
 }
 
-*::-webkit-scrollbar-thumb {
-  width: 0px !important;
-  background-color: whitesmoke !important;
-  border-radius: 0px !important;
-}
+// *::-webkit-scrollbar-thumb {
+//   width: 0px !important;
+//   background-color: whitesmoke !important;
+//   border-radius: 0px !important;
+// }
 
-*::-webkit-scrollbar:horizontal {
-  width: 0px !important;
-  background-color: white !important;
-}
+// *::-webkit-scrollbar:horizontal {
+//   width: 0px !important;
+//   background-color: white !important;
+// }
 
 *::-webkit-scrollbar-thumb:horizontal {
   width: 0px !important;
